--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,24 @@
 .logo {
 	margin-top: -10px;
 }
-h1,h2{
+h2,h1{
 	text-align: center;
 }
 body{
-	background-color: #FEF197;
+	background:url(../images/fond.jpeg) ;
 }
+.titre{
+	text-align: center;
+	font-size: 100px;
+	color: fuchsia;
+	background-color: white;
+	border: 3px solid fuchsia;
+	margin-left: auto;
+	margin-right: auto;
+}
+.intro{
+	text-align: center;
+	background-color: white;
+	color: blue;
+	border: 2px solid;
+	margin:100px;
