--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,7 @@ body{
 	margin-left: auto;
 	margin-right: auto;
 }
-.intro{
+.col-xs-10offset-2{
 	text-align: center;
 	background-color: white;
 	color: blue;
