--- a/css/style.css
+++ b/css/style.css
@@ -4,22 +4,22 @@
 h2,h1{
 	text-align: center;
 }
-body{
-	background: url(../images/fond.jpeg);
+body {
+	background-image: url(../images/fond2.jpeg);
 }
 .titre{
 	text-align: center;
 	font-size: 100px;
-	color: fuchsia;
+	color: brown;
 	background-color: white;
-	border: 3px solid fuchsia;
+	border: 3px solid brown;
 	margin-left: auto;
 	margin-right: auto;
 }
 .col-xs-10offset-2{
 	text-align: center;
 	background-color: white;
-	color: blue;
+	color: brown;
 	border: 2px solid;
 	margin: 80px;
 }
