--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@ h2,h1{
 	text-align: center;
 }
 body {
-	background-image: url(../images/fond2.jpeg);
+	background-image: url(../images/fond.jpeg);
 }
 .titre{
 	text-align: center;
